Finishing JavaDoc for all the Scene